# coss

./: .gitignore  coss.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
coss/: __main__.py  handler.py
template/python3.10/: Dockerfile  index.py  template.yml
template/python3.10/function/: handler_test.py
tests/: test_coss.py
